deleted booking page, created booking form, prevent page jumping

--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -7,4 +7,4 @@ $light-dark: #dddddd;
 $dark: #2e2e2e;
 $error-color: #ff0000;
 $shadow: linear-gradient(45deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8));
-$blue-gradient: linear-gradient(45deg, rgba(20, 105, 241, 1), rgba(42, 10, 184, 1));
+$blue-gradient: linear-gradient(45deg, rgb(147, 166, 231), rgb(56, 117, 231));
