--- a/src/sass/_main.scss
+++ b/src/sass/_main.scss
@@ -26,6 +26,10 @@ body {
 	overflow: hidden;
 }
 
+.scroll-block-padding {
+	padding-right: 17px;
+}
+
 .wrapper {
 	margin: 0 auto;
 	width: 100%;
@@ -94,55 +98,6 @@ body {
 
 .special-heading {
 	margin-top: 4em;
-}
-
-.popup {
-	display: none;
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background: rgba(46, 46, 46, 0.18);
-	overflow: hidden;
-	z-index: 900;
-
-	&__box {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		width: 300px;
-		height: 150px;
-		background-color: colors.$white-color;
-		border-radius: 8px;
-		border: 2px solid colors.$black-color;
-		z-index: 1000;
-
-		&-text {
-			font-size: 1.6rem;
-		}
-
-		&-btn {
-			margin-top: 40px;
-			padding: 0.5em;
-			width: 20%;
-			color: colors.$white-color;
-			background-color: colors.$special-color;
-			border: none;
-			border-radius: 8px;
-			font-size: 1.5rem;
-			text-align: center;
-			text-decoration: none;
-			cursor: pointer;
-
-			&::before {
-				background-color: colors.$special-btn-color;
-			}
-		}
-	}
 }
 
 .nav {
@@ -304,10 +259,6 @@ body {
 	background-image: colors.$shadow, url('../img/header-images/tunga_small.jpg');
 }
 
-.header-img-book {
-	background-image: colors.$shadow, url('../img/header-images/book-it_small.jpg');
-}
-
 .header-img-aboutus {
 	background-image: colors.$shadow, url('../img/header-images/about-us_small.jpg');
 }
@@ -373,69 +324,6 @@ body {
 	}
 }
 
-.book {
-	position: relative;
-	overflow: hidden;
-
-	&__form {
-		display: flex;
-		flex-direction: column;
-	}
-
-	&__box {
-		&-label {
-			text-transform: uppercase;
-		}
-
-		&-input,
-		&-select {
-			margin: 0.5em 0;
-			padding: 0.6em 1.2em;
-			width: 100%;
-			background-color: #fff;
-			border: none;
-			border-radius: 8px;
-			font-family: 'Montserrat', sans-serif;
-			font-size: 1.6rem;
-		}
-
-		&-error {
-			margin-bottom: 2em;
-			color: colors.$error-color;
-			font-size: 0.8em;
-			visibility: hidden;
-		}
-
-		&-btn {
-			align-self: flex-end;
-			margin-top: 3em;
-			padding: 1em;
-			width: 100%;
-			color: colors.$white-color;
-			background-color: colors.$special-color;
-			border: none;
-			border-radius: 8px;
-			font-size: 1.5rem;
-			cursor: pointer;
-
-			&::before {
-				background-color: colors.$special-btn-color;
-			}
-		}
-	}
-}
-
-.warning {
-	.book__box-error {
-		visibility: visible;
-	}
-
-	.book__box-input,
-	.book__box-select {
-		border: 1px solid colors.$error-color;
-	}
-}
-
 .content {
 	&__box {
 		display: flex;
@@ -486,13 +374,167 @@ body {
 			background-color: colors.$special-color;
 			border-radius: 1rem;
 			font-size: 1.6rem;
-			text-decoration: none;
 			text-transform: uppercase;
+			cursor: pointer;
 
 			&::before {
 				background-color: colors.$special-btn-color;
 			}
 		}
+	}
+}
+
+.popup {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-image: colors.$blue-gradient;
+	transform: translateX(100%);
+	opacity: 0;
+	transition: transform 0.7s, opacity 0.7s;
+	overscroll-behavior-y: contain;
+	overflow-y: auto;
+	z-index: 998;
+
+	&--active {
+		transform: translateX(0);
+		opacity: 1;
+	}
+
+	&__title {
+		padding: 2em;
+		color: colors.$white-color;
+		font-size: 2em;
+		text-align: center;
+		text-transform: uppercase;
+	}
+
+	&__form {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+		padding: 1em;
+	}
+
+	&__box {
+		&-label {
+			color: colors.$white-color;
+			text-transform: uppercase;
+		}
+
+		&-input,
+		&-select,
+		&-btn {
+			font-size: 1.6rem;
+			font-family: 'Montserrat', sans-serif;
+		}
+
+		&-input,
+		&-select {
+			margin: 0.5em 0;
+			padding: 0.6em 1.2em;
+			width: 100%;
+			background-color: #fff;
+			border: none;
+			border-radius: 8px;
+		}
+
+		&-error {
+			margin-bottom: 2em;
+			color: colors.$error-color;
+			font-size: 0.8em;
+			visibility: hidden;
+		}
+
+		&-btn {
+			margin: 3em;
+			padding: 1em;
+			width: 70%;
+			color: colors.$white-color;
+			background-color: colors.$special-color;
+			border: none;
+			border-radius: 8px;
+			text-transform: uppercase;
+			cursor: pointer;
+
+			&::before {
+				background-color: colors.$special-btn-color;
+			}
+		}
+
+		&-icon {
+			position: absolute;
+			top: 8px;
+			right: 1rem;
+			padding: 0.5em;
+			font-size: 2em;
+			color: colors.$white-color;
+			cursor: pointer;
+		}
+	}
+
+	&__message {
+		display: none;
+		position: fixed;
+		width: 100%;
+		height: 100%;
+		background: rgba(46, 46, 46, 0.20);
+		overflow: hidden;
+		z-index: 999;
+	
+		&-container {
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			flex-direction: column;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 300px;
+			height: 150px;
+			background-color: colors.$white-color;
+			border-radius: 8px;
+			border: 2px solid colors.$black-color;
+			z-index: 1000;
+		}
+
+		&-text {
+			margin: 1em;
+			font-size: 1.6rem;
+			text-align: center;
+		}
+
+		&-btn {
+			margin: 1em;
+			padding: 0.5em;
+			width: 40%;
+			color: colors.$white-color;
+			background-color: colors.$special-color;
+			border: none;
+			border-radius: 8px;
+			font-size: 1.5rem;
+			text-align: center;
+			text-decoration: none;
+			text-transform: uppercase;
+			cursor: pointer;
+
+			&::before {
+				background-color: colors.$special-btn-color;
+			}
+		}
+	}
+}
+
+.warning {
+	.popup__box-error {
+		visibility: visible;
+	}
+
+	.popup__box-input,
+	.popup__box-select {
+		border: 1px solid colors.$error-color;
 	}
 }
 
